--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                 Youtube</a></button>
                     </div>
                     <button class="custom-button" style="margin-top: 2rem;"><a
-                            href="https://ngl.link/mrdwiprasetiaaaaaaaaa" style="text-decoration: none;">ingin
+                            href="https://ngl.link/mrdwiiprasetiaaaaa" style="text-decoration: none;">ingin
                             mengirim pesan tanpa
                             diketahui? klik disini</a></button>
                 </div>
