--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
     </style>
     <!-- oinline css -->
-    <title>About Mr dwi prasetiaaa</title>
+    <title>Mr dwi prasetiaaa</title>
 </head>
 
 <body>
